--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "python.analysis.typeCheckingMode": "standard"
+    "python.analysis.typeCheckingMode": "basic",
+    "[python]": {
+      "editor.rulers": [
+        120
+      ],
+      "editor.insertSpaces": true,
+      "editor.tabSize": 4
+    }
 }
